--- a/test.yaml
+++ b/test.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
+  labels:
+    app: test
 spec:
   containers:
   - name: nginx
@@ -15,6 +17,8 @@ metadata:
   name: my-service
 spec:
   type: NodePort
+  selector:
+    app: test
   ports:
     - port: 80
       targetPort: 80
